# pymwe

./: .gitignore  README.md  example.py  pyproject.toml
src/pymwe/: __init__.py  cli.py  model.py  test_cli.py  test_init.py  test_model.py
