[project]
name = "pymwe"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" }
]
dependencies = [
    "scikit-learn>=1.6.1",
    "nltk>=3.9.1",
    "numba>=0.61.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pymwe-cli = "pymwe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "black>=25.1.0",
    "isort>=6.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymwe"]
